@@ -120,6 +120,7 @@ except AttributeError:
 d[types.TypeType] = _copy_atomic
 d[types.XRangeType] = _copy_atomic
 d[types.ClassType] = _copy_atomic
+d[types.BuiltinFunctionType] = _copy_atomic
 
 def _copy_list(x):
     return x[:]
@@ -233,6 +234,7 @@ except AttributeError:
 d[types.TypeType] = _deepcopy_atomic
 d[types.XRangeType] = _deepcopy_atomic
 d[types.ClassType] = _deepcopy_atomic
+d[types.BuiltinFunctionType] = _deepcopy_atomic
 
 def _deepcopy_list(x, memo):
     y = []
