@@ -83,6 +83,7 @@ Library
 - copy.py: applied SF patch 707900, fixing bug 702858, by Steven
   Taschuk.  Copying a new-style class that had a reference to itself
   didn't work.  (The same thing worked fine for old-style classes.)
+  Builtin functions are now treated as atomic, fixing bug #746304.
 
 - difflib.py has two new functions:  context_diff() and unified_diff().
 
